# uber-data-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  uber-data.code-workspace
.github/workflows/: terraform-deploy-data-analytics.yml
data-analysis/: pyproject.toml
data-analysis/data-analysis/: dataset.py  read_data.py  utils.py
data-analysis/data_analysis/: dataset.py  features.py  utils.py  validation.py
data-analysis/data_analysis/data_handling/: data_handler.py  validation.py
data-analysis/data_analysis/preprocess/: bronze_to_silver.py  silver_to_gold.py
data-analysis/notebooks/: .cache.sqlite  0_eda.ipynb  data_exploration.ipynb  eda.ipynb  gold_tables.ipynb
data-analysis/terraform/: .terraform.lock.hcl  bigquery.tf  cloud_function.tf  main.tf  variables.tf
data-analysis/terraform/cloud_functions/data_ingestion/: main.py  requirements.txt
data-analytics/: README.md
data-analytics/app/: load_data.py  read_data.py
data-analytics/cloud_functions/data_ingestion/: main.py
data-analytics/terraform/: bigquery.tf  cloud_function.tf  gcs.tf  main.tf  variables.tf
llm-companion/: main.py  pyproject.toml
llm-companion/llm-companion/notebooks/: chatbot.ipynb  polars_agent.ipynb
