[project]
name = "uber-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-api-python-client>=2.179.0",
    "google-cloud-bigquery>=3.36.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "load-dotenv>=0.1.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pre-commit>=4.3.0",
    "ruff>=0.12.11",
]
